# icossearchsystem1

./: .gitignore  .replit  README.md  cookies.txt  main.py  pyproject.toml  replit.md
app/: __init__.py
app/icos_core/: __init__.py  __main__.py  app_init.py  content_filter.py  element_mapper.py  network_handler.py  platform_info.py  release_info.py  route_registry.py  user_preferences.py  web_routes.py
app/icos_toolkit/: content_processor.py  platform_helpers.py  query_engine.py  security_shield.py  user_session.py
app/static/config/: icos.key
app/static/css/: autocomplete-fix.css  clear-icon-debug.css  dark-theme.css  header.css  hide-google-icons.css  images-fullscreen.css  input.css  light-theme.css  main.css  pagination.css  search.css  variables.css  video-results.css  voice-search.css
app/static/js/: autocomplete.js  favicons.js  images-fullscreen.js  pagination.js  query-logger.js  search-clear.js  settings-modal.js  voice-search.js
app/templates/: about.html  display.html  header.html  imageresults.html  index.html  index.html.backup  logo.html
