[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "attrs==22.2.0",
    "beautifulsoup4==4.11.2",
    "brotli==1.0.9",
    "cachelib==0.10.2",
    "certifi==2024.7.4",
    "cffi==1.17.1",
    "chardet==5.1.0",
    "click==8.1.3",
    "cryptography==43.0.1",
    "cssutils==2.7.0",
    "defusedxml==0.7.1",
    "flask-sqlalchemy>=3.1.1",
    "flask==2.3.2",
    "google-genai>=1.23.0",
    "idna==3.7",
    "itsdangerous==2.1.2",
    "jinja2==3.1.5",
    "lxml>=6.0.0",
    "markupsafe==2.1.2",
    "more-itertools==9.0.0",
    "packaging==23.0",
    "pillow>=11.2.1",
    "pluggy==1.0.0",
    "pycodestyle==2.10.0",
    "pycparser==2.22",
    "pycryptodome>=3.23.0",
    "pyopenssl==24.2.1",
    "pyparsing==3.0.9",
    "pytest==7.2.1",
    "python-dateutil==2.8.2",
    "python-dotenv==0.21.1",
    "requests==2.32.2",
    "soupsieve==2.4",
    "trafilatura>=1.6.1",
    "urllib3==1.26.19",
    "validators==0.22.0",
    "waitress==3.0.1",
    "wcwidth==0.2.6",
    "werkzeug==3.0.6",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "gunicorn>=23.0.0",
    "google-generativeai>=0.8.5",
]
